--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Zayat Export | Premium Egyptian Produce</title>
+    <title>Agro-Mart Export | Premium Egyptian Produce</title>
 
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#15803d" /> </head>
